--- a/Minichallenge_AndréPennini.ipynb
+++ b/Minichallenge_AndréPennini.ipynb
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "import random\n",
     "\n",
-    "tabela = pd.read_excel(\"C:/Users/Lenovo/Desktop/FEA DEV/Mini challenge - Semana 1.xlsx\")\n",
+    "tabela = pd.read_excel(\"C:/Users/Lenovo/OneDrive/Área de Trabalho/FEA DEV/Mini challenge - Semana 1.xlsx")\n",
     "display(tabela[['Nome','Restrição']])\n",
     "\n",
     "grupo1 = []\n",
